Refactor ExternalSQLParserIT (#28096)